<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresentationLayer.MainLeaderBoardsUI">

    <Button
        android:id="@+id/points"
        android:layout_width="250dp"
        android:layout_height="71dp"
        android:layout_marginTop="132dp"
        android:text="Points Leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/challenges"
        android:layout_width="250dp"
        android:layout_height="71dp"
        android:layout_marginTop="48dp"
        android:text="challenges leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points" />

    <Button
        android:id="@+id/distance"
        android:layout_width="250dp"
        android:layout_height="71dp"
        android:layout_marginTop="48dp"
        android:text="distance leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenges" />

</android.support.constraint.ConstraintLayout>