<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="comp3350.go2fit.Application.MainActivity">
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_Leaderboards"
        android:orderInCategory="100"
        android:title="Leaderboards"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_aboutGo2Fit"
        android:orderInCategory="100"
        android:title="About Go2Fit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_RedeemPrizes"
        android:orderInCategory="100"
        android:title="Redeem Prizes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_UpdateProfile"
        android:orderInCategory="100"
        android:title="Update Profile"
        app:showAsAction="never" />
</menu>
