...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:layout_marginBottom="180dp"
        android:layout_marginLeft="140dp"
        android:layout_marginStart="140dp"
        android:fadingEdge="horizontal|vertical"
...
