...
        android:gravity="center"
        android:text="Points Available"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/steps_required" />

    <Button
        android:id="@+id/button"
        android:layout_width="157dp"
        android:layout_height="69dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
